--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@react-native-community/async-storage": "1.7.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-gesture-handler": "1.5.3",
-    "react-navigation": "4.0.10",
-    "react-navigation-hooks": "1.1.0"
+    "@react-navigation/native": "5.0.7",
+    "@react-navigation/stack": "5.0.8",
+    "react-native-gesture-handler": "1.6.0",
+    "react-native-reanimated": "1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "2.0.0-beta.10"
+
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
